--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         // Fetch notes from the backend
         async function fetchNotes() {
             try {
-                const response = await fetch('http://localhost:8080/api/blogs');  // Updated to target localhost:8080
+                const response = await fetch('http://localhost:8080/api/blog');  // Updated to target localhost:8080
                 const notes = await response.json();
 
                 const notesList = document.getElementById('notes-list');
@@ -68,7 +68,7 @@
                     row.appendChild(titleCell);
 
                     const contentCell = document.createElement('td');
-                    contentCell.textContent = note.content;
+                    contentCell.textContent = note.contents;
                     row.appendChild(contentCell);
 
                     notesList.appendChild(row);
