--- a/adam-api.html
+++ b/adam-api.html
@@ -47,15 +47,17 @@
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#">Disabled</a>
+
             </li>
           </ul>
         </div>
       </nav>
     <h1>Notes</h1>
+    <H2><a class="nav-link" href="http://79.76.122.33/api/blog" >Original Author</a></H2>
     <table>
         <thead>
             <tr>
-                <th>created</th>
+                <th>Author</th>
                 <th>Title</th>
                 <th>Content</th>
             </tr>
@@ -66,12 +68,13 @@
     </table>
 
     <script>
+
         // Fetch notes from the backend
         async function fetchNotes() {
             try {
-                const response = await fetch('localhost:8080/apiV2/blog');  // Updated to target localhost:8080
+                const response = await fetch('http://79.76.122.33/api/blog');  // Updated to target localhost:8080
                 const notes = await response.json();
-
+                        console.log(notes)
                 const notesList = document.getElementById('notes-list');
 
                 // Clear any previous content
@@ -82,15 +85,15 @@
                     const row = document.createElement('tr');
 
                     const idCell = document.createElement('td');
-                    idCell.textContent = note.created;
+                    idCell.textContent = note.author;
                     row.appendChild(idCell);
 
                     const titleCell = document.createElement('td');
-                    titleCell.textContent = note.title;
+                    titleCell.textContent = note.content;
                     row.appendChild(titleCell);
 
                     const contentCell = document.createElement('td');
-                    contentCell.textContent = note.contents;
+                    contentCell.textContent = note.creation_date;
                     row.appendChild(contentCell);
 
                     notesList.appendChild(row);
