--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         // Fetch notes from the backend
         async function fetchNotes() {
             try {
-                const response = await fetch('localhost:8080/apiV2/blog');  // Updated to target localhost:8080
+                const response = await fetch('http://18.199.167.118:8080/api/blog');  // Updated to target localhost:8080
                 const notes = await response.json();
 
                 const notesList = document.getElementById('notes-list');
